Add endpoint to docs
